Use $tinyFontSize variable for gear data Remove float left from flow-block so font-icon can be displayed correctly when >768px Adjust consolePreBackground so it's contrasted better with background Include $noiseImage on body.simple since it was lost in an earlier commit Fine tune logo at mobile resolutions on body.simple (login) pages Create mixin panel_default_boxshadow

--- a/console/app/assets/stylesheets/_grid.scss
+++ b/console/app/assets/stylesheets/_grid.scss
@@ -71,7 +71,7 @@
 
       > li {
         line-height: 120%;
-        font-size: 50%;
+        font-size: $tinyFontSize;
         text-transform: uppercase;
 
         > h6 {
@@ -89,7 +89,6 @@
 @media (max-width: 767px) {
   .flow > .flow-block {
     display: inline-block;
-    float: left;
 
     &.right {
       float: right;
